# CEIA_ViT

./: README.md  pyproject.toml
TP1/Enunciado/: TP1.ipynb
TP2/Enunciado/: TP2.ipynb
TP2/Resolucion/: TP2.ipynb
TP3/Enunciado/: TP3.ipynb
